--- a/portfolio-dima/composer.json
+++ b/portfolio-dima/composer.json
@@ -15,6 +15,7 @@
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
+        "spatie/laravel-analytics": "^3.9",
         "tcg/voyager": "^1.4"
     },
     "require-dev": {
