--- a/portfolio-dima/package.json
+++ b/portfolio-dima/package.json
@@ -26,6 +26,7 @@
     "dependencies": {
         "animate.css": "^4.1.0",
         "bootstrap-vue": "^2.15.0",
+        "pace-js": "^1.0.2",
         "vue-router": "^3.3.4"
     }
 }
